Wed Oct 31 12:17:15 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_vxworks6.2.GNU:
        * include/makeinclude/platform_vxworks6.3.GNU:
          Improved VxWorks 6.x support

Tue Oct 30 14:51:21 UTC 2007  J.T. Conklin  <jtc@acorntoolworks.com>

        * ace/OS_NS_unistd.cpp:

          Changed ACE_OS::fork() to not call ACE_Base_Thread_Adapter::
          sync_log_msg() if ACE_HAS_THREADS.  sync_log_msg() will call
          async signal unsafe functions, which results in undefined
          behavior.

Tue Oct 30 14:29:31 UTC 2007  Abdullah Sowayan  <abdullah.sowayan@lmco.com>

        * bin/msvc_static_order.lst:

          Project names in CIAO have been changed recently due to the effort
          to break executor->servant dependency. generate_component_mpc.pl
          script now also generates project names that are different than
          the names that existed in the repository. As such, we needed to
          modify this file accordingly. This should fix compile time
          problems for WinXP_VC71_CIAOCore_Static_Debug build.

Tue Oct 30 10:56:15 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_vxworks5.5.x.GNU:
        * include/makeinclude/platform_vxworks6.2.GNU:
        * include/makeinclude/platform_vxworks6.3.GNU:
          Support static_libs_only=1 correctly

Mon Oct 29 16:35:09 UTC 2007  J.T. Conklin  <jtc@acorntoolworks.com>

        * ace/OS_NS_stdio.cpp:
        * ace/os_include/os_stdarg.h:

          Move workaround for the lack of va_copy() macro from
          OS_NS_stdio.cpp to os_include/os_stdarg.h.

          Thanks to Johnny Willemsen for suggesting this improvement.

Mon Oct 29 16:10:07 UTC 2007  Abdullah Sowayan  <abdullah.sowayan@lmco.com>

        * bin/fuzz.pl:

          Updated check_for_lack_ACE_OS to incorporate new wrapper facade functions
          introduced in: